--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
-    "react-social-icons": "^5.15.0"
+    "react-social-icons": "^5.15.0",
+    "sweetalert2": "^11.6.15"
   },
   "scripts": {
     "start": "react-scripts start",
