--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
+    "socket.io-client": "^4.5.4",
     "sweetalert2": "^11.6.15"
   },
   "scripts": {
