--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "emoji-picker-react": "^3.6.1",
     "formik": "^2.2.9",
+    "framer-motion": "^8.0.2",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.0",
@@ -24,6 +25,7 @@
     "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
