--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.3.1",
     "emoji-picker-react": "^3.6.1",
     "formik": "^2.2.9",
     "framer-motion": "^8.0.2",
